implements_HW_lesson9